[gd_scene load_steps=2 format=3 uid="uid://ejyqkhp13ed0"]

[ext_resource type="Script" path="res://Editor/Table/table_item.gd" id="1_lw432"]

[node name="TableItem" type="HBoxContainer"]
size_flags_horizontal = 3
focus_mode = 1
script = ExtResource("1_lw432")

[node name="Column_1" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Column 1fcfh"

[node name="Column_2" type="SpinBox" parent="."]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="Column_2" to="." method="_on_column_2_gui_input"]
